added login page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
         android:theme="@style/AppTheme">
 
         <activity android:name=".MainActivity">
-
         </activity>
         <activity android:name=".StartActivity">
             <intent-filter>
@@ -21,6 +20,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".LoginActivity">
+        </activity>
+
     </application>
 
 </manifest>
