--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:name=".BMSApplication"
     package="com.example.durandal.budgetingmadesimple">
 
@@ -10,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:name=".BMSApplication">
+        android:name=".BMSApplication"
+        tools:ignore="GoogleAppIndexingWarning">
 
 
 
@@ -27,6 +29,7 @@
         <activity android:name=".LoginActivity"></activity>
         <activity android:name=".SignUpActivity"></activity>
         <activity android:name=".CategoriesActivity" android:exported="true"></activity>
+        <activity android:name=".StatisticsActivity" android:exported="true"></activity>
     </application>
 
 </manifest>
