--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".delExpenditurePrompt"
+            android:theme="@style/AppTheme.CustomTheme"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
