--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,19 +4,16 @@
     package="com.example.durandal.budgetingmadesimple">
 
     <application
+        android:name=".BMSApplication"
         android:allowBackup="true"
         android:icon="@drawable/bms_logo"
         android:label="BMS"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name=".BMSApplication">
-
-
-
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity android:name=".StartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,9 +21,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity"></activity>
-        <activity android:name=".SignUpActivity"></activity>
-        <activity android:name=".CategoriesActivity" android:exported="true"></activity>
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".SignUpActivity" />
+        <activity
+            android:name=".CategoriesActivity"
+            android:exported="true" />
+        <activity android:name=".SettingsSupervisorActivity"></activity>
     </application>
 
 </manifest>
