--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".MainActivity"
             android:exported="true" />
@@ -23,31 +22,35 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-      
         <activity android:name=".LoginActivity" />
         <activity android:name=".SignUpActivity" />
         <activity
             android:name=".CategoriesActivity"
             android:exported="true" />
-        <activity android:name=".SettingsSupervisorActivity"></activity>
-
-
-        <activity android:name=".StatisticsActivity" android:exported="true"></activity>
-
-
-        <activity android:name=".addExpenditurePrompt"
-            android:theme="@style/AppTheme.CustomTheme"
-            android:exported="true">
+        <activity android:name=".SettingsSupervisorActivity" />
+        <activity
+            android:name=".StatisticsActivity"
+            android:exported="true" />
+        <activity
+            android:name=".addExpenditurePrompt"
+            android:exported="true"
+            android:theme="@style/AppTheme.CustomTheme">
             <intent-filter>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".delExpenditurePrompt"
-            android:theme="@style/AppTheme.CustomTheme"
-            android:exported="true">
-        </activity>
-
-
+        <activity
+            android:name=".delExpenditurePrompt"
+            android:exported="true"
+            android:theme="@style/AppTheme.CustomTheme" />
+        <activity
+            android:name=".AccountSettingsActivity"
+            android:label="Account Settings" />
+        <activity android:name=".SettingsSuperviseeActivity" />
+        <activity
+            android:name=".test"
+            android:label="@string/title_activity_test"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
