Quick fix to make changing password work. No secret question yet.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,8 @@
             android:name=".AccountSettingsActivity"
             android:label="Account Settings" />
         <activity android:name=".SettingsSuperviseeActivity" />
+        <activity android:name=".ChangePasswordActivity" />
+
 
     </application>
 
